<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

	<string name="app_name">eBookLauncher</string>
	<string name="notification_importing_msg">Importing Calibre Metadata</string>
	<string name="error_reading_in_book_metadata">Error during Calibre Metadata Import</string>
	<string name="check_for_new_version">Check for New Version</string>
	<string name="new_version_available">Version %1$s is now Available</string>
	<string name="page1_Apps">Apps\n(%1$s)</string>
	<string name="page1_Collections">Collections\n(%1$s)</string>
	<string name="page1_Books">Books\n(%1$s)</string>
	<string name="page1_Periodicals">Periodicals\n(%1$s)</string>
	<string name="page1_coverflow">Cover\nFlow</string>
	<string name="page1_settings">Settings</string>
	<string name="page1_of_1">page 1 of 1</string>
	<string name="page1_of_3">page 1 of 3</string>
	<string name="page1_currently_reading_lbl">Currently Reading</string>
	<string name="page1_collection_lbl">Collection Name</string>
	<string name="page1_nbr_item_format_1">(%1$d - %2$d of %3$d)</string>
	<string name="page1_nbr_item_format_2">(%1$d of %2$d)</string>
	
	<string name="page2_applications">Applications</string>
	<string name="page2_apps_selection_dialog_title">Select Apps</string>
	<string name="page2_apps_selection_dialog_btn_ok">OK</string>
	<string name="page2_Google_Books">Google Books</string>
	<string name="page2_Public_Library">Public Library</string>
	<string name="page2_Browser">Browser</string>
	<string name="page2_Purchased_Content">Purchased Content</string>
	<string name="page2_All_Notes">All Notes\n(%1$s)</string>
	<string name="page2_Dictionary">Dictionary\n</string>
	<string name="page2_Handwriting">Handwriting\n(%1$s)</string>
	<string name="page2_Text_Memo">Text Memo\n(%1$s)</string>
	<string name="page2_Pictures">Pictures\n(%1$s)</string>
	<string name="page2_Audio">Audio\n(%1$s)</string>
	<string name="page2_Sony_Settings">Sony Settings</string>
	<string name="page2_Android_Settings">Android Settings</string>
	<string name="page2_text_apps">Applications</string>
	
	<string name="page2_of_3">page 2 of 3</string>
	<string name="page3_of_3">page 3 of 3</string>
	
	<string name="app_grid_title">Apps</string>
	
	<string name="recent_book_grid_title">%1$s Books (recent)</string>
	
	<string name="view_preferences_title">Preferences</string>
	
	<string name="pref_number_of_recently_read">Number of Recent Read Books</string>
	<string name="pref_number_of_recently_read_summary">Show [%1$s] books in the "Currently Reading" section</string>
	
	<string name="pref_number_of_recently_added">Number of Recently Added Books</string>
	<string name="pref_number_of_recently_added_summary">Show [%1$s] books in the "Recently Added" section</string>
	
	<string name="pref_collection1_name">Collection 1</string>
	<string name="pref_collection1_name_summary">Show collection [%1$s] on the home screen</string>
	
	<string name="pref_collection2_name">Collection 2</string>
	<string name="pref_collection2_name_summary">Show collection [%1$s] on the home screen</string>

	<!-- These collections need a character at the front to make sure that they stand out from the proper collections -->
	<string name="pref_collection_recently_added">* Recently Added</string>
	<string name="pref_collection_periodicals">* Periodicals</string>
	
	<string name="pref_use_alternate_screen">Use Alternative Screen Layout</string>
	<string name="pref_use_alternate_screen_yes">Use a Grid of books for homescreen</string>
	<string name="pref_use_alternate_screen_no">Use Currently Reading and two collections for homescreen</string>
	
	<string name="pref_use_filenames">Display Filenames</string>
	<string name="pref_use_filenames_yes">Display books filenames instead of title/author</string>
	<string name="pref_use_filenames_no">Display books title/author</string>

	<!-- Periodical grid screen -->
	<string name="periodical_grid_title">Periodicals (all)</string>
	<string name="periodical_grid_sorted_title">Sorted by Title</string>
	<string name="periodical_grid_sorted_number_books">Sorted by Nbr Books</string>

	<!-- Text Notes grid screen -->
	<string name="text_note_grid_title">Text Notes (all)</string>
	<string name="text_note_grid_sorted_title">Sorted by Title</string>
	<string name="text_note_grid_sorted_number_books">Sorted by Nbr Books</string>

	<!-- Text note editor screen -->
	<string name="text_note_editor_title">Edit</string>
	<string name="text_note_editor_save">Save</string>
	<string name="text_note_editor_new">New</string>

	<!-- Book grid screen -->
	<string name="book_grid_title">%1$s Books (all)</string>
	<string name="book_grid_title_filtered">%1$s Books (%2$s)</string>
	<string name="book_grid_title_collection">%1$s Books (in %2$s)</string>
	<string name="book_grid_sorted_title">Sorted by Title</string>
	<string name="book_grid_sorted_author">Sorted by Author</string>
	<string name="book_grid_sorted_added">Sorted by Date Added</string>
	<string name="book_grid_sorted_filename">Sorted by Filename</string>
	<string name="book_grid_sorted_last_read">Sorted by Date Read</string>
	<string name="book_grid_filter_dialog_title">Choose collections</string>
	<string name="book_grid_filter_dialog_btn_ok">Okay</string>
	<string name="book_grid_search_dialog_title">Search For:</string>
	<string name="book_grid_search_dialog_btn_ok">Okay</string>
	<string name="book_grid_search_dialog_btn_cancel">Cancel</string>
	<string name="book_grid_sort_title">Title</string>
	<string name="book_grid_sort_author">Author</string>
	<string name="book_grid_sort_collection">Collection</string>
	<string name="book_grid_sort_filename">Filename</string>

	<!-- Book grid context menu items -->
	<string name="book_grid_context_item_view_book_details">View Book Details</string>
	<string name="book_grid_context_item_open_book">Open Book</string>
	<string name="book_grid_context_item_delete_book">Delete Book</string>

	<!-- Collection list screen -->
	<string name="collection_list_title">%1$s Collections (all)</string>
	<string name="collection_list_title_filtered">%1$s Collections (%2$s)</string>
	<string name="collection_list_sorted_title">Sorted by Title</string>
	<string name="collection_list_sorted_nbrBooks">Sorted by Number of Books</string>

	<!-- Book details screen -->
	<string name="book_details_title">Details</string>
	<string name="book_details_series">Series</string>
	<string name="book_details_author">Author</string>
	<string name="book_details_publisher">Publisher</string>
	<string name="book_details_tags">Tags</string>
	<string name="book_details_collections">Collections</string>
	<string name="book_details_isbn">ISBN</string>
	<string name="book_details_summary">Summary</string>
    <string name="book_details_filename">Fielname</string>

	<!-- Home Menus -->
	<string name="menu_about">About</string>
	<string name="menu_settings">Device Settings</string>
	<string name="menu_preferences">My Home Settings</string>
	<string name="menu_clear_default_settings">Clear App Defaults</string>
	<string name="menu_select_apps">Select Apps</string>
	<string name="menu_choose_collection">Choose Collection</string>
	<string name="menu_clear_filters">Clear Filters</string>
	<string name="menu_send_log">Send Log File</string>

	<!-- *************************** About information *************************** -->
	<string name="about_version">version</string>
	<string name="about_author">Andy Aspell-Clark</string>
	<string name="about_summary">\tA replacement Homescreen\n\tFor Nook Simple Touch &#38; Sony PRS-T1
		</string>
	<string name="about_copyright">Copyright© 2011/2012\nAndy Aspell-clark</string>
	<string name="about_website_label">eBookLauncher Home</string>
	<string name="about_website_url">http://code.google.com/p/sonyprst1home/</string>
	<string name="about_website_userguide_url">http://andy.aspellclark.org.uk/</string>
	<string name="about_email">andyaspellclark@gmail.com</string>

</resources>