<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/BookDetailsMainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/BookDetailsCoverImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/generic_book_cover" />

    <TextView
        android:id="@+id/BookDetailsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BookDetailsMainLayout"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_title"
        android:textColor="@android:color/black"
        android:textSize="22dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsFilename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsTitle"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_filename"
        android:textColor="@android:color/black"
        android:textSize="22dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsSeries"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsFilename"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_series"
        android:textColor="@android:color/black"
        android:textSize="18dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsSeries"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_author"
        android:textColor="@android:color/black"
        android:textSize="18dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsPublisher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsAuthor"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_publisher"
        android:textColor="@android:color/black"
        android:textSize="18dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsTags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsPublisher"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_tags"
        android:textColor="@android:color/black"
        android:textSize="18dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsISBN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsTags"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_isbn"
        android:textColor="@android:color/black"
        android:textSize="18dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/BookDetailsSummary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BookDetailsISBN"
        android:layout_margin="5dip"
        android:layout_toRightOf="@+id/BookDetailsCoverImg"
        android:gravity="center"
        android:text="@string/book_details_summary"
        android:textColor="@android:color/black"
        android:textSize="12dip"
        android:typeface="sans" />

</RelativeLayout>