<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:stretchColumns="*" >

    <TableRow>

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:paddingLeft="10dip"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dip" >

            <TextView
                android:id="@+id/about_author"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about_author"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/about_author_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about_email"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/about_summary"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about_summary"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:text="@string/about_version"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/about_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:gravity="center"
            android:text="@string/about_website_url"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/about_legal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:textColor="@android:color/black"
            android:textSize="10dip"
            android:textStyle="italic" />
    </TableRow>

</TableLayout>